--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -40,8 +40,8 @@
                     android:textSize="50sp" />
 
                 <TextView
+                    android:id="@+id/home_text_view_date"
                     style="@style/home_text_view_big"
-                    android:text="5 December"
                     android:textColor="@android:color/white"
                     android:textSize="30sp"
                     android:textStyle="" />
