implemented bottom sheet in trip summary

--- a/android-app/app/src/main/res/layout/activity_trip_completed.xml
+++ b/android-app/app/src/main/res/layout/activity_trip_completed.xml
@@ -1,112 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true"
     android:background="@color/primaryDarkColor"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".TripSummaryActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/home_current_mode"
+        style="@style/home_text_view_big"
+        android:text="mode"
+        android:textColor="@android:color/white"
+        android:textSize="50sp" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <include layout="@layout/trip_summary_bottom_sheet" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:padding="@dimen/default_padding">
-
-
-                <TextView
-                    android:id="@+id/home_current_mode"
-                    style="@style/home_text_view_big"
-                    android:text="mode"
-                    android:textColor="@android:color/white"
-                    android:textSize="50sp" />
-
-                <LinearLayout
-                    android:id="@+id/home_predictions"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0">
-
-                        <TextView
-                            android:id="@+id/trip_completed_emissions"
-                            style="@style/summary_text_view_value"
-                            android:text="@string/home_emissions" />
-
-                        <TextView
-                            style="@style/summary_text_view_label"
-                            android:text="grams" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0">
-
-                        <TextView
-                            android:id="@+id/trip_completed_distance_travelled"
-                            style="@style/summary_text_view_value"
-                            android:text="@string/home_distance_travelled" />
-
-                        <TextView
-                            style="@style/summary_text_view_label"
-                            android:text="meters" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0">
-
-                        <TextView
-                            android:id="@+id/trip_completed_duration"
-                            style="@style/summary_text_view_value"
-                            android:text="@string/home_distance_travelled" />
-
-                        <TextView
-                            style="@style/summary_text_view_label"
-                            android:text="minutes" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-    </LinearLayout>
-
-    <!-- List all the legs -->
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="@dimen/default_padding"
-        android:background="@drawable/rounded_top_corners">
-        <ListView
-            android:id="@+id/trip_completed_legs_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </FrameLayout>
-
-</LinearLayout>
 
