--- a/android-app/app/src/main/res/values/styles.xml
+++ b/android-app/app/src/main/res/values/styles.xml
@@ -49,22 +49,21 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:textSize">@dimen/material_text_display2</item>
     </style>
 
     <style name="home_text_view_label" parent="home_text_view_big">
         <item name="android:textColor">@color/primaryDarkColor</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">@dimen/material_text_display1</item>
     </style>
 
     <style name="summary_text_view_value" parent="home_text_view_value">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">@dimen/material_text_headline</item>
     </style>
 
     <style name="summary_text_view_label" parent="home_text_view_label">
-        <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle"></item>
+        <item name="android:textSize">@dimen/material_text_title</item>
     </style>
 
     <style name="EqualSpacingCenterVerticalLL">
