--- a/android-app/app/src/main/res/layout/activity_trip_completed.xml
+++ b/android-app/app/src/main/res/layout/activity_trip_completed.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".TripSummaryActivity">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+
     <TextView
         android:id="@+id/home_current_mode"
         style="@style/home_text_view_big"
