--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -53,24 +53,28 @@
         </FrameLayout>
 
         <LinearLayout
-            android:id="@+id/home_predictions"
+            android:id="@+id/home_trip_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:background="@drawable/rounded_top_corners"
-            android:padding="@dimen/default_padding">
+            android:padding="@dimen/default_padding"
+            android:transitionName="@string/transition_trip_info">
 
             <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
 
                 <TextView
                     android:id="@+id/home_emissions"
+                    android:transitionName="@string/transition_trip_info_emissions_value"
                     style="@style/home_text_view_value"
                     android:text="@string/home_emissions" />
 
                 <TextView
+                    android:id="@+id/home_emissions_label"
                     style="@style/home_text_view_label"
+                    android:transitionName="@string/transition_trip_info_emissions_value"
                     android:text="grams" />
 
             </LinearLayout>
@@ -79,11 +83,14 @@
 
                 <TextView
                     android:id="@+id/home_distance_travelled"
+                    android:transitionName="@string/transition_trip_info_distance_value"
                     style="@style/home_text_view_value"
                     android:text="@string/home_distance_travelled" />
 
                 <TextView
+                    android:id="@+id/home_distance_travelled_label"
                     style="@style/home_text_view_label"
+                    android:transitionName="@string/transition_trip_info_distance_label"
                     android:text="meters" />
 
             </LinearLayout>
@@ -92,10 +99,13 @@
 
                 <Chronometer
                     android:id="@+id/home_chronometer"
+                    android:transitionName="@string/transition_trip_info_duration_value"
                     style="@style/home_text_view_value" />
 
                 <TextView
+                    android:id="@+id/home_chronometer_label"
                     style="@style/home_text_view_label"
+                    android:transitionName="@string/transition_trip_info_duration_label"
                     android:text="minutes" />
 
             </LinearLayout>
