fixed transition from trip to summary

--- a/android-app/app/src/main/res/layout/trip_summary_bottom_sheet.xml
+++ b/android-app/app/src/main/res/layout/trip_summary_bottom_sheet.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical"
     android:transitionName="@string/transition_trip_info"
     app:behavior_hideable="false"
+    app:behavior_peekHeight="130dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     tools:showIn="@layout/activity_trip_completed">
 
