--- a/android-app/app/src/main/res/values/colors.xml
+++ b/android-app/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-  <color name="primaryColor">#2e7d32</color>
-  <color name="primaryLightColor">#60ad5e</color>
-  <color name="primaryDarkColor">#005005</color>
+  <color name="primaryColor">#1b5e20</color>
+  <color name="primaryLightColor">#4c8c4a</color>
+  <color name="primaryDarkColor">#003300</color>
   <color name="primaryTextColor">#ffffff</color>
   <color name="primaryTextColorInverted">#000000</color>
   <color name="primaryRed">#d11a2a</color>
